--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.4.23
 Werkzeug==2.0.1
-gunicorn==20.1.0 
+gunicorn==20.1.0
+marshmallow-sqlalchemy==0.28.1
+marshmallow==3.14.1 
